src/objects/SALT_Record__c.object
<CustomObject>
    <description>Custom Object to hold  all purchases made under account records.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>A SALT Record will associated with a account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Salt_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Field contains the item cost.</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ItemCode__c</fullName>
        <description>Field to uniquely identify the Item</description>
        <label>Item Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemDescription__c</fullName>
        <description>Field contains the description of item</description>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>This field will capture the cost of the product from the SALT Product object and would not change thus restricting the change of Cost in SALT Record even if the price changes for the SALT Product.</description>
        <label>ListPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OE_Code__c</fullName>
        <description>Field to hold the Customer Number(OE Code)</description>
        <label>OE Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <inlineHelpText>Field  refers specifically to what you sell</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premiums</fullName>
                </value>
                <value>
                    <fullName>Printed Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Field holds the Quantity of Items.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALT_Product__c</fullName>
        <label>SALT Product</label>
        <referenceTo>SALT_Product__c</referenceTo>
        <relationshipName>Salt_Records</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <description>Field use to hold the shipping date and time.</description>
        <label>Ship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipping_Charge__c</fullName>
        <label>Shipping Charge</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>SALT Purchases</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Salt Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALT Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>